changed base.html Albert_Musk url

--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
             <img src="{{ url_for('static', filename = 'portrait.png') }}">
         </div>
         <div class="name">
-            <a href="#" target="_blank">Albert Musk-BLOG</a>
+            <a href="{{ url_for('hello_world') }}" target="_blank">Albert Musk-BLOG</a>
         </div>
         </div>
     </header>
