--- a/static/write/write.css
+++ b/static/write/write.css
@@ -31,7 +31,12 @@
     text-align: center;
     padding-top: 12.5px;
 }
-#editor {
-    overflow:scroll;
-    max-height:300px;
+
+#editor{
+    width: 1000px;
+    margin: 0 auto;
+}
+.button-submit{
+    padding: 10px;
+    text-align: center;
 }
