--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,7 @@
     <title>{% block titlename %}{% endblock %}</title>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename = 'base.css') }}" />
     <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="shortcut icon" href="{{ url_for('static',filename='favicon.ico') }}";>
     {% block head_content %}{% endblock %}
 </head>
 <body>
