--- a/templates/write.html
+++ b/templates/write.html
@@ -4,6 +4,8 @@
 
 {% block head_content %}
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename = 'write/write.css') }}" />
+    <script type="text/javascript" src='//unpkg.com/wangeditor/release/wangEditor.min.js'></script>
+    <script type="text/javascript" src='http://apps.bdimg.com/libs/jquery/1.6.4/jquery.min.js'></script>
 {% endblock %}
 
 {% block content %}
@@ -36,7 +38,20 @@
                 </div>
                 -->
             </div>
-            <button type="submit" class="btn btn-default">Submit</button>
         </div>
+        <!-- wangEditor-->
+        <div id="editor"></div>
+        <script type="application/javascript">
+            $(document).ready(function () {
+                var rich_editor = window.wangEditor;
+                var ed = new rich_editor('#editor');
+                ed.create();
+            })
+        </script>
+        <!-- wangEditor end-->
+        <div class="button-submit">
+            <button type="submit" class="btn btn-default"\>Submit</button>
+        </div>
+
     </form>
 {% endblock %}
