--- a/templates/write.html
+++ b/templates/write.html
@@ -52,6 +52,12 @@
         <div class="button-submit">
             <button type="submit" class="btn btn-default"\>Submit</button>
         </div>
+        <div class="error_content">
+            {% if errorname %}
+                <p><span style="font-size: 20px;">Error:输入框不能为空，请输入内容！</span></p>
+            {% endif %}
+        </div>
+
 
     </form>
 {% endblock %}
