--- a/templates/write.html
+++ b/templates/write.html
@@ -24,21 +24,21 @@
                 <div class="input-group input-group-lg write_asides_name">
                     <span class="input-group-addon" id="sizing-addon1">Asides</span>
                 </div>
-                <!--
                 <div>
                     <label class="checkbox-inline">
-                        <input type="checkbox" id="inlineCheckbox1" value="python">Python
+                        <input type="checkbox" id="inlineCheckbox1" name="python" value="Python">Python
                     </label>
                     <label class="checkbox-inline">
-                        <input type="checkbox" id="inlineCheckbox2" value="flask">Flask
+                        <input type="checkbox" id="inlineCheckbox2" name="flask" value="Flask">Flask
                     </label>
                     <label class="checkbox-inline">
-                        <input type="checkbox" id="inlineCheckbox3" value="crawler">爬虫
+                        <input type="checkbox" id="inlineCheckbox3" name="pachong" value="爬虫">爬虫
                     </label>
                 </div>
-                -->
+
             </div>
         </div>
+
         <!-- wangEditor-->
         <div id="editor"></div>
         <script type="application/javascript">
