--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,8 @@
 {% extends 'base.html' %}
 {% block titlename %}首页{% endblock %}
+{% block head_content %}
+    <link rel="stylesheet" href="{{ url_for('static',filename='index.css') }}">
+{% endblock %}
 {% block content %}
     {% for article in articles %}
         <article>
@@ -8,7 +11,18 @@
                 {{ article.summary }}
             </summary>
             <aside>
-                {{ article.aside }}
+                {% for i in article.tags %}
+                    {% if i.tag_name == 'Python' %}
+                        <span class="label label-default tags">{{ i.tag_name }}</span>
+                    {% endif %}
+                    {% if i.tag_name == 'Flask' %}
+                        <span class="label label-primary tags">{{ i.tag_name }}</span>
+                    {% endif %}
+                    {% if i.tag_name == '爬虫' %}
+                        <span class="label label-info tags">{{ i.tag_name }}</span>
+                    {% endif %}
+                {% endfor %}
+
                 <time>{{ article.create_time|time_cut }}</time>
             </aside>
         </article>
