--- a/static/index.css
+++ b/static/index.css
@@ -1,5 +1,13 @@
 .tags{
     padding: 3px;
     margin: 3.6px;
-
+    font-size: 10px;
+}
+.tags a{
+    font-size: 10px;
+}
+.label{
+    width: 52.7px;
+    height: 20px;
+    font-size: 10px;
 }
