--- a/templates/write.html
+++ b/templates/write.html
@@ -33,7 +33,7 @@
                         <input type="checkbox" id="inlineCheckbox2" name="flask" value="Flask">Flask
                     </label>
                     <label class="checkbox-inline">
-                        <input type="checkbox" id="inlineCheckbox3" name="pachong" value="爬虫">爬虫
+                        <input type="checkbox" id="inlineCheckbox3" name="pachong" value="Web Crawler">爬虫
                     </label>
                 </div>
 
