--- a/static/front/article.css
+++ b/static/front/article.css
@@ -1,70 +1,24 @@
+div{
+    text-align: center;
+}
 .content{
     width: 980px;
     margin: 0 auto;
     height: auto;
+    text-align: center;
 }
 .content-title{
-    margin: 0 382.5px;
-    text-align: center;
+    margin: 0 auto;
     font-size: 40px;
-
 }
 
 .content-summary{
-    margin: 0 382.5px;
+    margin: 0 auto;
     text-align: center;
     font-size: 20px;
 }
 
-#content-text{
-    margin: 0 382.5px;
-}
+/*#content-text{*/
+    /*margin: 0 382.5px;*/
+/*}*/
 
-
-/* wangEditor样式
-
-/* table 样式 */
-table {
-  border-top: 1px solid #ccc;
-  border-left: 1px solid #ccc;
-}
-table td,
-table th {
-  border-bottom: 1px solid #ccc;
-  border-right: 1px solid #ccc;
-  padding: 3px 5px;
-}
-table th {
-  border-bottom: 2px solid #ccc;
-  text-align: center;
-}
-
-/* blockquote 样式 */
-blockquote {
-  display: block;
-  border-left: 8px solid #d0e5f2;
-  padding: 5px 10px;
-  margin: 10px 0;
-  line-height: 1.4;
-  font-size: 100%;
-  background-color: #f1f1f1;
-}
-
-/* code 样式 */
-code {
-  display: inline-block;
-  *display: inline;
-  *zoom: 1;
-  background-color: #f1f1f1;
-  border-radius: 3px;
-  padding: 3px 5px;
-  margin: 0 3px;
-}
-pre code {
-  display: block;
-}
-
-/* ul ol 样式 */
-ul, ol {
-  margin: 10px 0 10px 20px;
-}
