--- a/static/front/base.css
+++ b/static/front/base.css
@@ -9,7 +9,7 @@ i,cite,em,var,address,dfn{font-style:normal;}
 li{list-style:none;}
 h1,h2,h3,h4,h5,h6,small{font-size:100%;}
 sup,sub{font-size:83%;}
-pre,code,kbd,samp{font-family:inherit;}
+pre,kbd,samp{font-family:inherit;}
 q:before,q:after{content:none;}
 textarea{overflow:auto;resize:none;}
 label,summary{cursor:default;}
