--- a/templates/front/article.html
+++ b/templates/front/article.html
@@ -2,10 +2,18 @@
 
 {% block titlename %}{{ article.title }}{% endblock %}
 {% block head_content %}
-    <link rel="stylesheet" href="{{ url_for('static',filename='front/article.css') }}">
     <script src="http://cdn.bootcss.com/jquery/3.1.1/jquery.min.js"></script>
     <link rel="stylesheet" href="{{url_for('static',filename='editormd/editormd.min.css')}}">
     <link rel="stylesheet" href="{{url_for('static',filename='editormd/editormd.preview.css')}}">
+    <link rel="stylesheet" href="{{url_for('static',filename='editormd/index.css')}}">
+    <link rel="stylesheet" href="{{url_for('static',filename='editormd/planeui.min.css')}}">
+    <link rel="stylesheet" href="{{ url_for('static',filename='front/article.css') }}">
+
+{#    测试#}
+{#    <link rel="stylesheet" href="{{url_for('static',filename='editormd/css/editormd.css')}}">#}
+{#    <link rel="stylesheet" href="{{url_for('static',filename='editormd/css/editormd.logo.css')}}">#}
+{#    <link rel="stylesheet" href="{{url_for('static',filename='editormd/css/editormd.preview.css')}}">#}
+
     <script src="{{url_for('static',filename='editormd/editormd.min.js')}}"></script>
     <script src="{{ url_for('static',filename='editormd/lib/marked.min.js') }}"></script>
     <script src="{{ url_for('static',filename='editormd/lib/prettify.min.js') }}"></script>
@@ -28,9 +36,6 @@
         <div id="content-text">
         </div>
         <div id="test-editormd-view">
-           <textarea style="display:none;" name="test-editormd-markdown-doc">###Hello world!</textarea>
-        </div>
-        <div id="test-editormd-view2">
             <textarea id="append-test" style="display:none;">{{ article.context }}</textarea>
         </div>
 
@@ -38,32 +43,14 @@
 
 
     </div>
-{#    <script type="application/javascript">#}
-{#        var context = document.getElementById('context_input').value;#}
-{#        document.getElementById('content-text').innerHTML = context#}
-{#    </script>#}
+    <script type="application/javascript">
+        {#var context = document.getElementById('context_input').value;#}
+        {#document.getElementById('content-text').innerHTML = context#}
+    </script>
     <script type="text/javascript">
         $(function() {
-            var testEditormdView, testEditormdView2;
+            var testEditormdView;
 
-            $.get("test.md", function(markdown) {
-
-                testEditormdView = editormd.markdownToHTML("test-editormd-view", {
-                    markdown        : markdown ,//+ "\r\n" + $("#append-test").text(),
-                    //htmlDecode      : true,       // 开启 HTML 标签解析，为了安全性，默认不开启
-                    htmlDecode      : "style,script,iframe",  // you can filter tags decode
-                    //toc             : false,
-                    tocm            : false,    // Using [TOCM]
-                    //tocContainer    : "#custom-toc-container", // 自定义 ToC 容器层
-                    //gfm             : false,
-                    //tocDropdown     : true,
-                    // markdownSourceCode : true, // 是否保留 Markdown 源码，即是否删除保存源码的 Textarea 标签
-                    emoji           : true,
-                    taskList        : true,
-                    tex             : true,  // 默认不解析
-                    flowChart       : true,  // 默认不解析
-                    sequenceDiagram : true  // 默认不解析
-                });
 
                 //console.log("返回一个 jQuery 实例 =>", testEditormdView);
 
@@ -71,9 +58,9 @@
                 //console.log(testEditormdView.getMarkdown());
 
                 //alert(testEditormdView.getMarkdown());
-            });
 
-            testEditormdView2 = editormd.markdownToHTML("test-editormd-view2", {
+            testEditormdView = editormd.markdownToHTML("test-editormd-view", {
+
                 htmlDecode      : "style,script,iframe",  // you can filter tags decode
                 emoji           : true,
                 taskList        : true,
@@ -83,4 +70,6 @@
             });
         });
     </script>
+
+
 {% endblock %}
